Restructured build tree

--- a/cx2t/CMakeLists.txt
+++ b/cx2t/CMakeLists.txt
@@ -3,10 +3,15 @@
 
 set(CX2T_COMMON_DIR "${CMAKE_CURRENT_SOURCE_DIR}/common")
 set(CX2T_SRC_DIR "${CMAKE_CURRENT_SOURCE_DIR}/src")
-set(CX2T_GEN_SRC_DIR "${CMAKE_BINARY_DIR}/generated-src")
-set(CX2T_UT_GEN_SRC_DIR "${CMAKE_BINARY_DIR}/ut-generated-src")
+set(CX2T_GEN_SRC_DIR "${CMAKE_CURRENT_BINARY_DIR}/build/generated-src")
+set(CX2T_CLASSES_DIR "${CMAKE_CURRENT_BINARY_DIR}/build/classes")
+set(CX2T_DIST_DIR "${CMAKE_CURRENT_BINARY_DIR}/build/dist")
 set(CX2T_UT_SRC_DIR "${CMAKE_CURRENT_SOURCE_DIR}/unittest")
-set(CX2T_PROPERTIES_DIR "${CMAKE_CURRENT_BINARY_DIR}/common")
+set(CX2T_UT_GEN_SRC_DIR "${CMAKE_CURRENT_BINARY_DIR}/unit-tests/generated-src")
+set(CX2T_UT_CLASSES_DIR "${CMAKE_CURRENT_BINARY_DIR}/unit-tests/classes")
+set(CX2T_UT_DIST_DIR "${CMAKE_CURRENT_BINARY_DIR}/unit-tests/dist")
+set(CX2T_UT_REPORTS_DIR "${CMAKE_CURRENT_BINARY_DIR}/unit-tests/reports")
+set(CX2T_PROPERTIES_DIR "${CMAKE_BINARY_DIR}/common")
 
 configure_file(
   ${CMAKE_CURRENT_SOURCE_DIR}/common/claw.properties.in
