--- a/cx2t/src/build.xml
+++ b/cx2t/src/build.xml
@@ -18,9 +18,6 @@
     <property name="src.translator.parser.dir"
               value="${gen.src.dir}/claw/wani/language/parser"/>
 
-    <!-- Java compiled classes directory, set externally -->
-    <property name="build.dir" value=""/>
-
     <!-- Classpath for the CX2T Translator library -->
     <path id="build.path">
         <pathelement path="${st4.dep}"/>
@@ -43,7 +40,7 @@
     <target name="init" depends="common.bootstrap"
             description="Initialize build directories">
         <tstamp/>
-        <mkdir dir="${build.dir}"/>
+        <mkdir dir="${classes.dir}"/>
         <mkdir dir="${src.translator.parser.dir}"/>
     </target>
 
@@ -70,7 +67,7 @@
     <target name="compile" depends="common.resolve, antlr"
             description="compile the source">
         <javac executable="${javac.exec}" fork="yes" includeantruntime="false" srcdir=""
-               destdir="${build.dir}" classpathref="build.path" debug="on">
+               destdir="${classes.dir}" classpathref="build.path" debug="on">
             <src>
                 <pathelement path="${src.dir}"/>
                 <pathelement path="${gen.src.dir}"/>
@@ -82,21 +79,21 @@
     <target name="jar" depends="compile" description="package, output to JAR">
         <mkdir dir="${dist.dir}"/>
         <!-- CLAW X2T TATSU -->
-        <jar jarfile="${dist.dir}/${claw.tatsu.jar}" basedir="${build.dir}"
+        <jar jarfile="${dist.dir}/${claw.tatsu.jar}" basedir="${classes.dir}"
              includes="claw/tatsu/**"/>
         <!-- CLAW X2T SHENRON -->
-        <jar jarfile="${dist.dir}/${claw.shenron.jar}" basedir="${build.dir}"
+        <jar jarfile="${dist.dir}/${claw.shenron.jar}" basedir="${classes.dir}"
              includes="claw/shenron/**"/>
         <!-- CLAW X2T WANI -->
-        <jar jarfile="${dist.dir}/${claw.wani.jar}" basedir="${build.dir}"
+        <jar jarfile="${dist.dir}/${claw.wani.jar}" basedir="${classes.dir}"
              includes="claw/ClawX2T.class claw/ClawVersion.class claw/wani/**"/>
         <!-- -->
-        <jar jarfile="${dist.dir}/${external.jar}" basedir="${build.dir}"
+        <jar jarfile="${dist.dir}/${external.jar}" basedir="${classes.dir}"
              includes="external/**"/>
     </target>
 
     <target name="clean" description="clean up">
-        <delete dir="${build.dir}"/>
+        <delete dir="${classes.dir}"/>
         <delete file="${dist.dir}/${claw.tatsu.jar}"/>
         <delete file="${dist.dir}/${claw.shenron.jar}"/>
         <delete file="${dist.dir}/${claw.wani.jar}"/>
