Re-enabled "parallel" build in travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -72,7 +72,7 @@ script:
 - mkdir build
 - cd build
 - cmake -DCMAKE_INSTALL_PREFIX=$HOME/claw ..
-- make
+- make -j
 - make install
 - make -j clean-transformation transformation test
 - cd -
