--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -4,12 +4,12 @@ sonar.projectVersion=1.0.1
 sonar.organization=claw-project
 sonar.host.url=https://sonarcloud.io
 sonar.sources=${env.CLAW_SRC}/cx2t/src/claw/
-sonar.java.binaries=${env.CLAW_BUILD}/build/,${env.CLAW_BUILD}/build/lib/
-sonar.java.libraries=${env.CLAW_BUILD}/build/*.jar,${env.CLAW_BUILD}/build/lib/*.jar,${env.OMNI_HOME}/share/om-common.jar,${env.OMNI_HOME}/share/om-f-back.jar
-sonar.binaries=${env.CLAW_BUILD}/build/,${env.CLAW_BUILD}/build/lib/
-sonar.tests=${env.CLAW_BUILD}/build/
+sonar.java.binaries=${env.CLAW_BUILD}/cx2t/build/dist,${env.CLAW_BUILD}/cx2t/3rdparty/dist
+sonar.java.libraries=${env.CLAW_BUILD}/cx2t/build/dist/*.jar,${env.CLAW_BUILD}/cx2t/3rdparty/dist/*.jar,${env.OMNI_HOME}/share/om-common.jar,${env.OMNI_HOME}/share/om-f-back.jar
+sonar.binaries=${env.CLAW_BUILD}/cx2t/build/dist/,${env.CLAW_BUILD}/cx2t/3rdparty/dist
+sonar.tests=${env.CLAW_BUILD}/cx2t/unit-tests/dist
 sonar.dynamicAnalysis=reuseReports
 sonar.exclusions=**/*BaseListener.java,**/ClawParser.java,**/ClawLexer.java,**/ClawListener.java,**/*.java.in,**/*.tokens,**/*.g4,**/TestConstant.java,**/ClawVersion.java
-sonar.junit.reportPaths=${env.CLAW_BUILD}/reports
+sonar.junit.reportPaths=${env.CLAW_BUILD}/cx2t/unit-tests/reports
 sonar.core.codeCoveragePlugin=jacoco
-sonar.jacoco.reportPaths=${env.CLAW_BUILD}/reports/jacoco.exec
+sonar.jacoco.reportPaths=${env.CLAW_BUILD}/cx2t/unit-tests/reports/jacoco.exec
