--- a/cx2t/ivy.xml
+++ b/cx2t/ivy.xml
@@ -16,5 +16,6 @@
     <dependency org="net.consensys.cava" name="cava-toml" rev="0.3.1"/>
     <dependency org="org.jacoco" name="org.jacoco.ant" rev="0.8.2" />
     <dependency org="org.ow2.asm" name="asm" rev="6.2.1"/>
+    <dependency org="net.sourceforge.argparse4j" name="argparse4j" rev="0.8.1"/>
   </dependencies>
 </ivy-module>
