--- a/cx2t/claw.properties.in
+++ b/cx2t/claw.properties.in
@@ -75,6 +75,11 @@ claw.tatsu.dep=${dist.dir}/${claw.tatsu.jar}
 # CLAW driver libraries
 driver.jar=clawfc.jar
 driver.dep=${dist.dir}/${driver.jar}
+driver.libs.dir=../share/claw
+d.l.dir=${driver.libs.dir}
+driver.runtime.classpath=${d.l.dir}/${claw.tatsu.jar} ${d.l.dir}/${claw.wani.jar} ${d.l.dir}/${claw.shenron.jar} \
+${d.l.dir}/${commoncli.jar} ${d.l.dir}/${antlr4.jar} ${d.l.dir}/${antlr4.runtime.jar} ${d.l.dir}/${toml.jar} \
+${d.l.dir}/${argparse4j.jar}
 
 # CLAW X2T unittests libraries
 claw.wani.ut.jar=claw-x2t-wani-ut.jar
