--- a/driver/src/build.xml
+++ b/driver/src/build.xml
@@ -14,6 +14,7 @@
     <!-- Classpath for the CX2T Translator library -->
     <path id="build.path">
         <pathelement path="${argparse4j.dep}"/>
+        <pathelement path="${claw.wani.dep}"/>
     </path>
 
     <import file="${common.dir}/common-targets.xml"/>
@@ -25,7 +26,6 @@
         <mkdir dir="${driver.classes.dir}"/>
     </target>
 
-<echo message="driver.src.dir: ${driver.src.dir}"/>
     <!-- Compile the java code for the two libraries -->
     <target name="compile" depends="common.resolve"
             description="compile the source">
@@ -38,7 +38,12 @@
         <mkdir dir="${dist.dir}"/>
         <!-- Driver -->
         <jar jarfile="${driver.dist.dir}/${driver.jar}" basedir="${driver.classes.dir}"
-             includes="**"/>
+             includes="**">
+            <manifest>
+                <attribute name="Main-Class" value="clawfc.Driver"/>
+                <attribute name="Class-Path" value="${driver.runtime.classpath}"/>
+            </manifest>
+        </jar>
     </target>
 
     <target name="clean" description="clean up">
