--- a/cx2t/src/build.xml
+++ b/cx2t/src/build.xml
@@ -46,7 +46,7 @@
 
     <!-- Check if parser is up-to-date or need to be re-generated -->
     <uptodate property="antlr.required"
-              targetfile="claw/wani/language/parser/Claw.g4" >
+              targetfile="${src.dir}/claw/wani/language/parser/Claw.g4" >
         <srcfiles dir="${src.translator.parser.dir}" includes="*.java" erroronmissingdir="false" />
     </uptodate>
 
@@ -59,7 +59,7 @@
             <arg value="${src.translator.parser.dir}"/>
             <arg value="-package"/>
             <arg value="claw.wani.language.parser"/>
-            <arg line="claw/wani/language/parser/Claw.g4"/>
+            <arg line="${src.dir}/claw/wani/language/parser/Claw.g4"/>
         </java>
     </target>
 
