--- a/cx2t/unittest/build.xml
+++ b/cx2t/unittest/build.xml
@@ -10,7 +10,6 @@
   <!-- Value set externally-->
   <property name="claw.properties.dir" value=""/>
   <property file="${claw.properties.dir}/claw.properties"/>
-  <import file="${common.dir}/common-targets.xml"/>
 
   <!-- JaCoCo code coverage -->
   <taskdef uri="antlib:org.jacoco.ant" resource="org/jacoco/ant/antlib.xml">
@@ -38,14 +37,13 @@
   </path>
 
   <!-- Initialization step -->
-  <target name="init" depends="common.bootstrap">
+  <target name="init">
     <tstamp />
     <mkdir dir="${ut.classes.dir}" />
   </target>
 
   <!-- Compile java sources -->
-  <target name="compile" depends="common.resolve"
-          description="compile the source">
+  <target name="compile" description="compile the source">
     <javac executable="${javac.exec}" fork="yes" includeantruntime="false" destdir="${ut.classes.dir}"
            classpathref="build.path" debug="on" >
       <src>
