--- a/resources/eclipse/cx2t-driver.classpath.in
+++ b/resources/eclipse/cx2t-driver.classpath.in
@@ -32,10 +32,16 @@
 			<attribute name="javadoc_location" value="jar:file:@CX2T_3RDPARTY_DIST_DIR@/@COMMON_CLI_NAME@-javadoc.jar!/"/>
 		</attributes>
 	</classpathentry>
+	<classpathentry kind="lib" path="@CX2T_3RDPARTY_DIST_DIR@/@ARGPARSE_NAME@.jar">
+	    <attributes>
+			<attribute name="javadoc_location" value="jar:file:@CX2T_3RDPARTY_DIST_DIR@/@ARGPARSE_NAME@-javadoc.jar!/"/>
+		</attributes>
+	</classpathentry>
 	<classpathentry kind="lib" path="@OMNI_JAR_TOOLS@"/>
 	<classpathentry kind="lib" path="@CX2T_DIST_DIR@/@CLAW_X2T_TATSU@.jar"/>
 	<classpathentry kind="lib" path="@CX2T_DIST_DIR@/@CLAW_X2T_SHENRON@.jar"/>
 	<classpathentry kind="lib" path="@CX2T_DIST_DIR@/@CLAW_X2T_WANI@.jar"/>
+	<classpathentry kind="lib" path="@INT_CLAW_HOME@/bin/clawfc.jar"/>
 
 	<classpathentry kind="output" path="bin"/>
 </classpath>
