--- a/driver/clawfc.properties.in
+++ b/driver/clawfc.properties.in
@@ -4,8 +4,8 @@
 claw.name = @PROJECT_NAME@
 claw.version = @PROJECT_VERSION@
 claw.fc.default = @CMAKE_Fortran_COMPILER_ID@
+claw.home = @INT_CLAW_HOME@
 
 omni.version.string = @OMNI_VERSION_STRING@
 omni.version.tag = @OMNI_GIT_COMMIT_HASH@
-omni.bundled.install = @ADD_OMNI_XCODEML_TOOLS_TO_INSTALL@
 omni.home = @OMNI_HOME@
