Silenced shellcheck warnings

--- a/driver/libexec/claw_f_lib.sh.in
+++ b/driver/libexec/claw_f_lib.sh.in
@@ -799,8 +799,9 @@ function claw::process_dependencies() {
     sed -i.bak "s:${temp_dir}/::g" "${file_pp}"
 
     # Pass the module in the front-end to get the .xmod file
-    # shellcheck disable=SC2086,SC2068
+    # shellcheck disable=SC2124
     OMNI_CMD="${OMNI_F2X_CMD} ${include_opt[@]} ${module_opt[@]} ${frontend_add_opt[@]} ${OMNI_F2X_OPT} \"${file_pp}\""
+    # shellcheck disable=SC2086,SC2068
     ${OMNI_F2X_CMD} ${include_opt[@]} ${module_opt[@]} ${frontend_add_opt[@]} ${OMNI_F2X_OPT} "${file_pp}" &>> omni_ffront.log
     retVal=$?
     if [ $retVal -ne 0 ]; then
